Rename to Blades in the Dark Roller

--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -17,3 +17,5 @@
 1.5.2  Fix for V9p2 scene controls
 
 1.5.3  CSS namespace cleanup and additional control fix
+
+1.6.0  Fork from Forged in the Dark roller
