--- a/lang/es.json
+++ b/lang/es.json
@@ -1,52 +1,52 @@
 {
-  "FitDRoller.Roll": "Lanzar",
-  "FitDRoller.Cancel": "Cancelar",
-  "FitDRoller.Close": "Cerrar",
-  "FitDRoller.Dice": "Dado",
-  "FitDRoller.RollTitle": "Forged in the Dark Roller",
-  "FitDRoller.RollTokenDescription": "Selecciona tu reserva de dados. Selecciona tu posición. Seleccina el efecto.",
-  "FitDRoller.RollNumberOfDice": "Número de dados",
-  "FitDRoller.Position": "Posición",
-  "FitDRoller.Effect": "Efecto",
-  "FitDRoller.Modifier": "Modificador",
-  "FitDRoller.PositionControlled": "Controlada",
-  "FitDRoller.PositionRisky": "Arriesgada",
-  "FitDRoller.PositionDesperate": "Desesperada",
-  "FitDRoller.EffectLimited": "Limitado",
-  "FitDRoller.EffectGreat": "Estupendo",
-  "FitDRoller.EffectStandard": "Estándar",
-  "FitDRoller.RollFailure": "Falla",
-  "FitDRoller.RollCriticalSuccess": "¡Éxito crítico!",
-  "FitDRoller.RollSuccess": "Éxito",
-  "FitDRoller.RollPartialSuccess": "Éxito parcial",
-  "FitDRoller.RollDoWithIncreasedEffect": "Lo haces con <strong> mayor efecto </strong>.",
-  "FitDRoller.RollDo": "Lo haces",
-  "FitDRoller.RollPartialSuccessPositionControlled": "Vacilas. Retírate y prueba un enfoque diferente, o házlo con una consecuencia menor: se produce una <strong> complicación menor </strong>, tiene un <strong> efecto reducido </strong>, sufre <strong> un daño menor </strong>, terminas en una posición <strong> arriesgada </strong>.",
-  "FitDRoller.RollPartialSuccessPositionRisky": "Lo haces, pero hay una consecuencia: sufres <strong> daño </strong>, ocurre una <strong> complicación </strong>, tienes <strong> efecto reducido </strong>, terminas en un <strong> posición </strong> desesperada.",
-  "FitDRoller.RollPartialSuccessPosition": "Lo haces, pero hay una consecuencia: sufres <strong> daños graves </strong>, se produce una <strong> complicación grave </strong>, tienes <strong> efecto reducido </strong>.",
-  "FitDRoller.RollFailurePositionControlled": "Vacilas. Insiste, aprovechando una oportunidad <strong> arriesgada </strong> o retírate y pruebaun enfoque diferente.",
-  "FitDRoller.RollFailurePositionRisky": "Las cosas van mal. Sufres <strong> daño </strong>, se produce una <strong> complicación </strong>, acabas en una <strong> situación desesperada </strong>, <strong> pierdes esta oportunidad </strong>.",
-  "FitDRoller.RollFailurePositionDesperate": "Es el peor resultado. Sufres <strong> daños graves </strong>, <strong> se produce una complicación grave </strong>, <strong> pierdes esta oportunidad de acción </strong>.",
-  "FitDRoller.RollXP": "Marca <strong> XP </strong> para el atributo relacionado.",
-  "FitDRoller.RollZeromode": "Cero dados lanzados: tira dos dados y toma el más bajo",
-  "FitDRoller.RollGreatEffect": "Gran efecto",
-  "FitDRoller.RollGreatEffectDescription": "Obtienes un resultado excepcional o un efecto extremo. <br> <br> Si se trata de una tirada de implicación, ya has superado el primer obstáculo y estás en una posición <strong> controlada </strong> para lo que venga a continuación. <br> <br> Si estás marcando relojes de facción o curación, marca <strong> 5 </strong> segmentos.",
-  "FitDRoller.RollStandardEffect": "Efecto estándar",
-  "FitDRoller.RollStandardEffectDescription": "Obtienes un buen resultado o un efecto completo. <br> <br> Si se trata de una tirada de implicación, comienzas en una posición <strong> controlada </strong>. <br> <br> Si estás marcando relojes de facción o curación, marca <strong> 3 </strong> segmentos.",
-  "FitDRoller.RollLimitedEffect": "Efecto limitado",
-  "FitDRoller.RollLimitedEffectDescription": "Obtienes un resultado mixto o un efecto parcial. <br> <br> Si se trata de una tirada de implicación, comienzas en una posición <strong> arriesgada </strong>. <br> <br> Si estás marcando relojes de facción o curación, marca <strong> 2 </strong> segmentos.",
-  "FitDRoller.RollPoorEffect": "Efecto pobre",
-  "FitDRoller.RollPoorEffectDescription": "Obtienes un mal resultado o poco efecto. <br> <br> Si se trata de una tirada de implicación, comienzas en una posición <strong> desesperada </strong>. <br> ¡Buena suerte! <br> <br> Si Estás marcando relojes de facción o curación, marca <strong> 1 </strong> segmento.",
-  "FitDRoller.maxDiceCountName": "Dados máximos en una tirada",
-  "FitDRoller.maxDiceCountHint": "El número máximo de dados disponibles en la ventana emergente.",
-  "FitDRoller.defaultDiceCountName": "Número predeterminado de dados para tirar",
-  "FitDRoller.defaultDiceCountHint": "La cantidad de dados que comenzarán seleccionados en la ventana emergente.",
-  "FitDRoller.defaultPositionName": "Posición por defecto",
-  "FitDRoller.defaultPositionHint": "La posición que comenzará seleccionada en la ventana emergente",
-  "FitDRoller.defaultEffectName": "Efecto predeterminado",
-  "FitDRoller.defaultEffectHint": "El efecto que comenzará seleccionado en la ventana emergente.",
-  "FitDRoller.backgroundColorName": "Dados Color de Fondo",
-  "FitDRoller.backgroundColorHint": "El color de fondo de los dados da como resultado los mensajes de chat",
-  "FitDRoller.backgroundColorGray": "gris",
-  "FitDRoller.backgroundColorBlack": "negro"
+  "BitDRoller.Roll": "Lanzar",
+  "BitDRoller.Cancel": "Cancelar",
+  "BitDRoller.Close": "Cerrar",
+  "BitDRoller.Dice": "Dado",
+  "BitDRoller.RollTitle": "Forged in the Dark Roller",
+  "BitDRoller.RollTokenDescription": "Selecciona tu reserva de dados. Selecciona tu posición. Seleccina el efecto.",
+  "BitDRoller.RollNumberOfDice": "Número de dados",
+  "BitDRoller.Position": "Posición",
+  "BitDRoller.Effect": "Efecto",
+  "BitDRoller.Modifier": "Modificador",
+  "BitDRoller.PositionControlled": "Controlada",
+  "BitDRoller.PositionRisky": "Arriesgada",
+  "BitDRoller.PositionDesperate": "Desesperada",
+  "BitDRoller.EffectLimited": "Limitado",
+  "BitDRoller.EffectGreat": "Estupendo",
+  "BitDRoller.EffectStandard": "Estándar",
+  "BitDRoller.RollFailure": "Falla",
+  "BitDRoller.RollCriticalSuccess": "¡Éxito crítico!",
+  "BitDRoller.RollSuccess": "Éxito",
+  "BitDRoller.RollPartialSuccess": "Éxito parcial",
+  "BitDRoller.RollDoWithIncreasedEffect": "Lo haces con <strong> mayor efecto </strong>.",
+  "BitDRoller.RollDo": "Lo haces",
+  "BitDRoller.RollPartialSuccessPositionControlled": "Vacilas. Retírate y prueba un enfoque diferente, o házlo con una consecuencia menor: se produce una <strong> complicación menor </strong>, tiene un <strong> efecto reducido </strong>, sufre <strong> un daño menor </strong>, terminas en una posición <strong> arriesgada </strong>.",
+  "BitDRoller.RollPartialSuccessPositionRisky": "Lo haces, pero hay una consecuencia: sufres <strong> daño </strong>, ocurre una <strong> complicación </strong>, tienes <strong> efecto reducido </strong>, terminas en un <strong> posición </strong> desesperada.",
+  "BitDRoller.RollPartialSuccessPosition": "Lo haces, pero hay una consecuencia: sufres <strong> daños graves </strong>, se produce una <strong> complicación grave </strong>, tienes <strong> efecto reducido </strong>.",
+  "BitDRoller.RollFailurePositionControlled": "Vacilas. Insiste, aprovechando una oportunidad <strong> arriesgada </strong> o retírate y pruebaun enfoque diferente.",
+  "BitDRoller.RollFailurePositionRisky": "Las cosas van mal. Sufres <strong> daño </strong>, se produce una <strong> complicación </strong>, acabas en una <strong> situación desesperada </strong>, <strong> pierdes esta oportunidad </strong>.",
+  "BitDRoller.RollFailurePositionDesperate": "Es el peor resultado. Sufres <strong> daños graves </strong>, <strong> se produce una complicación grave </strong>, <strong> pierdes esta oportunidad de acción </strong>.",
+  "BitDRoller.RollXP": "Marca <strong> XP </strong> para el atributo relacionado.",
+  "BitDRoller.RollZeromode": "Cero dados lanzados: tira dos dados y toma el más bajo",
+  "BitDRoller.RollGreatEffect": "Gran efecto",
+  "BitDRoller.RollGreatEffectDescription": "Obtienes un resultado excepcional o un efecto extremo. <br> <br> Si se trata de una tirada de implicación, ya has superado el primer obstáculo y estás en una posición <strong> controlada </strong> para lo que venga a continuación. <br> <br> Si estás marcando relojes de facción o curación, marca <strong> 5 </strong> segmentos.",
+  "BitDRoller.RollStandardEffect": "Efecto estándar",
+  "BitDRoller.RollStandardEffectDescription": "Obtienes un buen resultado o un efecto completo. <br> <br> Si se trata de una tirada de implicación, comienzas en una posición <strong> controlada </strong>. <br> <br> Si estás marcando relojes de facción o curación, marca <strong> 3 </strong> segmentos.",
+  "BitDRoller.RollLimitedEffect": "Efecto limitado",
+  "BitDRoller.RollLimitedEffectDescription": "Obtienes un resultado mixto o un efecto parcial. <br> <br> Si se trata de una tirada de implicación, comienzas en una posición <strong> arriesgada </strong>. <br> <br> Si estás marcando relojes de facción o curación, marca <strong> 2 </strong> segmentos.",
+  "BitDRoller.RollPoorEffect": "Efecto pobre",
+  "BitDRoller.RollPoorEffectDescription": "Obtienes un mal resultado o poco efecto. <br> <br> Si se trata de una tirada de implicación, comienzas en una posición <strong> desesperada </strong>. <br> ¡Buena suerte! <br> <br> Si Estás marcando relojes de facción o curación, marca <strong> 1 </strong> segmento.",
+  "BitDRoller.maxDiceCountName": "Dados máximos en una tirada",
+  "BitDRoller.maxDiceCountHint": "El número máximo de dados disponibles en la ventana emergente.",
+  "BitDRoller.defaultDiceCountName": "Número predeterminado de dados para tirar",
+  "BitDRoller.defaultDiceCountHint": "La cantidad de dados que comenzarán seleccionados en la ventana emergente.",
+  "BitDRoller.defaultPositionName": "Posición por defecto",
+  "BitDRoller.defaultPositionHint": "La posición que comenzará seleccionada en la ventana emergente",
+  "BitDRoller.defaultEffectName": "Efecto predeterminado",
+  "BitDRoller.defaultEffectHint": "El efecto que comenzará seleccionado en la ventana emergente.",
+  "BitDRoller.backgroundColorName": "Dados Color de Fondo",
+  "BitDRoller.backgroundColorHint": "El color de fondo de los dados da como resultado los mensajes de chat",
+  "BitDRoller.backgroundColorGray": "gris",
+  "BitDRoller.backgroundColorBlack": "negro"
 }
