--- a/lang/es.json
+++ b/lang/es.json
@@ -6,9 +6,22 @@
   "BitDRoller.RollTitle": "Forged in the Dark Roller",
   "BitDRoller.RollTokenDescription": "Selecciona tu reserva de dados. Selecciona tu posición. Seleccina el efecto.",
   "BitDRoller.RollNumberOfDice": "Número de dados",
+  "BitDRoller.Action": "Acción",
   "BitDRoller.Position": "Posición",
   "BitDRoller.Effect": "Efecto",
   "BitDRoller.Modifier": "Modificador",
+  "BitDRoller.ActionHunt": "Caza",
+  "BitDRoller.ActionStudy": "Estudio",
+  "BitDRoller.ActionSurvey": "Encuesta",
+  "BitDRoller.ActionTinker": "Remendar",
+  "BitDRoller.ActionFinesse": "Finura",
+  "BitDRoller.ActionProwl": "Merodear",
+  "BitDRoller.ActionSkirmish": "Escaramuza",
+  "BitDRoller.ActionWreck": "Naufragio",
+  "BitDRoller.ActionAttune": "Armonizar",
+  "BitDRoller.ActionCommand": "Dominio",
+  "BitDRoller.ActionConsort": "Consorte",
+  "BitDRoller.ActionSway": "Influencia",
   "BitDRoller.PositionControlled": "Controlada",
   "BitDRoller.PositionRisky": "Arriesgada",
   "BitDRoller.PositionDesperate": "Desesperada",
