--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -19,3 +19,5 @@
 1.5.3  CSS namespace cleanup and additional control fix
 
 1.6.0  Fork from Forged in the Dark roller
+
+1.7.0  Rename module, add BitD actions
