Fix module name

--- a/lang/en.json
+++ b/lang/en.json
@@ -3,8 +3,8 @@
   "BitDRoller.Cancel": "Cancel",
   "BitDRoller.Close": "Close",
   "BitDRoller.Dice": "Dice",
-  "BitDRoller.RollTitle": "Forged in the Dark Roller",
-  "BitDRoller.RollTokenDescription": "Choose your dice pool. Choose your position. Choose your effect.",
+  "BitDRoller.RollTitle": "Blades in the Dark Roller",
+  "BitDRoller.RollTokenDescription": "Choose your dice pool. Choose your action. Choose your position. Choose your effect.",
   "BitDRoller.RollNumberOfDice": "Number of Dice",
 
   "BitDRoller.Action": "Action",
