--- a/lang/es.json
+++ b/lang/es.json
@@ -4,7 +4,7 @@
   "BitDRoller.Close": "Cerrar",
   "BitDRoller.Dice": "Dado",
   "BitDRoller.RollTitle": "Forged in the Dark Roller",
-  "BitDRoller.RollTokenDescription": "Selecciona tu reserva de dados. Selecciona tu posición. Seleccina el efecto.",
+  "BitDRoller.RollTokenDescription": "Selecciona tu reserva de dados. Selecciona tu acción. Selecciona tu posición. Seleccina el efecto.",
   "BitDRoller.RollNumberOfDice": "Número de dados",
   "BitDRoller.Action": "Acción",
   "BitDRoller.Position": "Posición",
