--- a/lang/en.json
+++ b/lang/en.json
@@ -1,73 +1,75 @@
 {
-  "BitDRoller.Roll": "Roll",
-  "BitDRoller.Cancel": "Cancel",
-  "BitDRoller.Close": "Close",
-  "BitDRoller.Dice": "Dice",
-  "BitDRoller.RollTitle": "Blades in the Dark Roller",
-  "BitDRoller.RollTokenDescription": "Choose your dice pool. Choose your action. Choose your position. Choose your effect.",
-  "BitDRoller.RollNumberOfDice": "Number of Dice",
+  "FitDRoller.Roll": "Roll",
+  "FitDRoller.Cancel": "Cancel",
+  "FitDRoller.Close": "Close",
+  "FitDRoller.Dice": "Dice",
+  "FitDRoller.RollTitle": "Forged in the Dark Roller",
+  "FitDRoller.RollTokenDescription": "Choose your dice pool. Choose your action. Choose your position. Choose your effect.",
+  "FitDRoller.RollNumberOfDice": "Number of Dice",
 
-  "BitDRoller.Action": "Action",
-  "BitDRoller.Position": "Position",
-  "BitDRoller.Effect": "Effect",
-  "BitDRoller.Modifier": "Modifier",
+  "FitDRoller.Action": "Action",
+  "FitDRoller.Position": "Position",
+  "FitDRoller.Effect": "Effect",
+  "FitDRoller.Modifier": "Modifier",
 
-  "BitDRoller.ActionHunt": "Hunt",
-  "BitDRoller.ActionStudy": "Study",
-  "BitDRoller.ActionSurvey": "Survey",
-  "BitDRoller.ActionTinker": "Tinker",
-  "BitDRoller.ActionFinesse": "Finesse",
-  "BitDRoller.ActionProwl": "Prowl",
-  "BitDRoller.ActionSkirmish": "Skirmish",
-  "BitDRoller.ActionWreck": "Wreck",
-  "BitDRoller.ActionAttune": "Attune",
-  "BitDRoller.ActionCommand": "Command",
-  "BitDRoller.ActionConsort": "Consort",
-  "BitDRoller.ActionSway": "Sway",
+  "FitDRoller.DefaultActionHunt": "Hunt",
+  "FitDRoller.DefaultActionStudy": "Study",
+  "FitDRoller.DefaultActionSurvey": "Survey",
+  "FitDRoller.DefaultActionTinker": "Tinker",
+  "FitDRoller.DefaultActionFinesse": "Finesse",
+  "FitDRoller.DefaultActionProwl": "Prowl",
+  "FitDRoller.DefaultActionSkirmish": "Skirmish",
+  "FitDRoller.DefaultActionWreck": "Wreck",
+  "FitDRoller.DefaultActionAttune": "Attune",
+  "FitDRoller.DefaultActionCommand": "Command",
+  "FitDRoller.DefaultActionConsort": "Consort",
+  "FitDRoller.DefaultActionSway": "Sway",
 
-  "BitDRoller.PositionControlled": "Controlled",
-  "BitDRoller.PositionRisky": "Risky",
-  "BitDRoller.PositionDesperate": "Desperate",
-  "BitDRoller.EffectLimited": "Limited",
-  "BitDRoller.EffectGreat": "Great",
-  "BitDRoller.EffectStandard": "Standard",
+  "FitDRoller.PositionControlled": "Controlled",
+  "FitDRoller.PositionRisky": "Risky",
+  "FitDRoller.PositionDesperate": "Desperate",
+  "FitDRoller.EffectLimited": "Limited",
+  "FitDRoller.EffectGreat": "Great",
+  "FitDRoller.EffectStandard": "Standard",
 
-  "BitDRoller.RollFailure": "Failure",
-  "BitDRoller.RollCriticalSuccess": "Critical Success!",
-  "BitDRoller.RollSuccess": "Success",
-  "BitDRoller.RollPartialSuccess": "Partial Success",
+  "FitDRoller.RollFailure": "Failure",
+  "FitDRoller.RollCriticalSuccess": "Critical Success!",
+  "FitDRoller.RollSuccess": "Success",
+  "FitDRoller.RollPartialSuccess": "Partial Success",
 
-  "BitDRoller.RollDoWithIncreasedEffect": "You do it with <strong>increased effect</strong>.",
-  "BitDRoller.RollDo": "You do it.",
-  "BitDRoller.RollPartialSuccessPositionControlled": "You hesitate. Withdraw and try a different approach, or else do it with a minor consequence: a <strong>minor complication</strong> occurs, you have <strong>reduced effect</strong>, you suffer <strong>lesser harm</strong>, you end up in a <strong>risky</strong> position.",
-  "BitDRoller.RollPartialSuccessPositionRisky": "You do it, but there’s a consequence: you suffer <strong>harm</strong>, a <strong>complication</strong> occurs, you have <strong>reduced effect</strong>, you end up in a <strong>desperate</strong> position.",
-  "BitDRoller.RollPartialSuccessPosition": "You do it, but there’s a consequence: you suffer <strong>severe harm</strong>, a <strong>serious complication</strong> occurs, you have <strong>reduced effect</strong>.",
-  "BitDRoller.RollFailurePositionControlled": "You falter. Press on by seizing a <strong>risky</strong> opportunity, or withdraw and try a different approach.",
-  "BitDRoller.RollFailurePositionRisky": "Things go badly. You suffer <strong>harm</strong>, a <strong>complication</strong> occurs, you end up in a <strong>desperate</strong> position, you <strong>lose this opportunity</strong>.",
-  "BitDRoller.RollFailurePositionDesperate": "It’s the worst outcome. You suffer <strong>severe harm</strong>, a <strong>serious complication occurs</strong>, you <strong>lose this opportunity for action</strong>.",
+  "FitDRoller.RollDoWithIncreasedEffect": "You do it with <strong>increased effect</strong>.",
+  "FitDRoller.RollDo": "You do it.",
+  "FitDRoller.RollPartialSuccessPositionControlled": "You hesitate. Withdraw and try a different approach, or else do it with a minor consequence: a <strong>minor complication</strong> occurs, you have <strong>reduced effect</strong>, you suffer <strong>lesser harm</strong>, you end up in a <strong>risky</strong> position.",
+  "FitDRoller.RollPartialSuccessPositionRisky": "You do it, but there’s a consequence: you suffer <strong>harm</strong>, a <strong>complication</strong> occurs, you have <strong>reduced effect</strong>, you end up in a <strong>desperate</strong> position.",
+  "FitDRoller.RollPartialSuccessPosition": "You do it, but there’s a consequence: you suffer <strong>severe harm</strong>, a <strong>serious complication</strong> occurs, you have <strong>reduced effect</strong>.",
+  "FitDRoller.RollFailurePositionControlled": "You falter. Press on by seizing a <strong>risky</strong> opportunity, or withdraw and try a different approach.",
+  "FitDRoller.RollFailurePositionRisky": "Things go badly. You suffer <strong>harm</strong>, a <strong>complication</strong> occurs, you end up in a <strong>desperate</strong> position, you <strong>lose this opportunity</strong>.",
+  "FitDRoller.RollFailurePositionDesperate": "It’s the worst outcome. You suffer <strong>severe harm</strong>, a <strong>serious complication occurs</strong>, you <strong>lose this opportunity for action</strong>.",
 
-  "BitDRoller.RollXP": "Mark <strong>XP</strong> for the related attribute.",
-  "BitDRoller.RollZeromode": "Zero Dice rolled - rolling two dice and taking the lowest",
+  "FitDRoller.RollXP": "Mark <strong>XP</strong> for the related attribute.",
+  "FitDRoller.RollZeromode": "Zero Dice rolled - rolling two dice and taking the lowest",
 
-  "BitDRoller.RollGreatEffect": "Great Effect",
-  "BitDRoller.RollGreatEffectDescription": "You get an exceptional result or an extreme effect.<br><br>If this is an engagement roll, you've already overcome the first obstacle and are in a <strong>controlled</strong> position for whatever is next.<br><br>If you're marking faction or healing clocks, mark <strong>5</strong> segments.",
-  "BitDRoller.RollStandardEffect": "Standard Effect",
-  "BitDRoller.RollStandardEffectDescription": "You get a good result or full effect.<br><br>If this is an engagement roll, you start in a <strong>controlled</strong> position.<br><br>If you're marking faction or healing clocks, mark <strong>3</strong> segments.",
-  "BitDRoller.RollLimitedEffect": "Limited Effect",
-  "BitDRoller.RollLimitedEffectDescription": "You get a mixed result or a partial effect.<br><br>If this is an engagement roll, you start in a <strong>risky</strong> position.<br><br>If you're marking faction or healing clocks, mark <strong>2</strong> segments.",
-  "BitDRoller.RollPoorEffect": "Poor Effect",
-  "BitDRoller.RollPoorEffectDescription": "You get a bad result or little effect.<br><br>If this is an engagement roll, you start in a <strong>desperate</strong> position.<br>Good luck!<br><br>If you're marking faction or healing clocks, mark <strong>1</strong> segment.",
+  "FitDRoller.RollGreatEffect": "Great Effect",
+  "FitDRoller.RollGreatEffectDescription": "You get an exceptional result or an extreme effect.<br><br>If this is an engagement roll, you've already overcome the first obstacle and are in a <strong>controlled</strong> position for whatever is next.<br><br>If you're marking faction or healing clocks, mark <strong>5</strong> segments.",
+  "FitDRoller.RollStandardEffect": "Standard Effect",
+  "FitDRoller.RollStandardEffectDescription": "You get a good result or full effect.<br><br>If this is an engagement roll, you start in a <strong>controlled</strong> position.<br><br>If you're marking faction or healing clocks, mark <strong>3</strong> segments.",
+  "FitDRoller.RollLimitedEffect": "Limited Effect",
+  "FitDRoller.RollLimitedEffectDescription": "You get a mixed result or a partial effect.<br><br>If this is an engagement roll, you start in a <strong>risky</strong> position.<br><br>If you're marking faction or healing clocks, mark <strong>2</strong> segments.",
+  "FitDRoller.RollPoorEffect": "Poor Effect",
+  "FitDRoller.RollPoorEffectDescription": "You get a bad result or little effect.<br><br>If this is an engagement roll, you start in a <strong>desperate</strong> position.<br>Good luck!<br><br>If you're marking faction or healing clocks, mark <strong>1</strong> segment.",
 
-  "BitDRoller.maxDiceCountName": "Maximum Dice In a Roll",
-  "BitDRoller.maxDiceCountHint": "The maximum number of dice available in the popup",
-  "BitDRoller.defaultDiceCountName": "Default Number of Dice to Roll",
-  "BitDRoller.defaultDiceCountHint": "The number of dice that will start selected in the popup",
-  "BitDRoller.defaultPositionName": "Default Position",
-  "BitDRoller.defaultPositionHint": "The position that will start selected in the popup",
-  "BitDRoller.defaultEffectName": "Default Effect",
-  "BitDRoller.defaultEffectHint": "The effect that will start selected in the popup",
-  "BitDRoller.backgroundColorName": "Dice Background Color",
-  "BitDRoller.backgroundColorHint": "The background color of the dice results in the chat messages",
-  "BitDRoller.backgroundColorGray": "gray",
-  "BitDRoller.backgroundColorBlack": "black"
+  "FitDRoller.actionsName": "Actions",
+  "FitDRoller.actionsHint": "A comma separated list of the actions used by your system",
+  "FitDRoller.maxDiceCountName": "Maximum Dice In a Roll",
+  "FitDRoller.maxDiceCountHint": "The maximum number of dice available in the popup",
+  "FitDRoller.defaultDiceCountName": "Default Number of Dice to Roll",
+  "FitDRoller.defaultDiceCountHint": "The number of dice that will start selected in the popup",
+  "FitDRoller.defaultPositionName": "Default Position",
+  "FitDRoller.defaultPositionHint": "The position that will start selected in the popup",
+  "FitDRoller.defaultEffectName": "Default Effect",
+  "FitDRoller.defaultEffectHint": "The effect that will start selected in the popup",
+  "FitDRoller.backgroundColorName": "Dice Background Color",
+  "FitDRoller.backgroundColorHint": "The background color of the dice results in the chat messages",
+  "FitDRoller.backgroundColorGray": "gray",
+  "FitDRoller.backgroundColorBlack": "black"
 }
