More terminology tweaks

--- a/lang/es.json
+++ b/lang/es.json
@@ -41,7 +41,7 @@
   "FitDRoller.RollFailurePositionRisky": "Las cosas van mal. Sufres <strong> daño </strong>, se produce una <strong> complicación </strong>, acabas en una <strong> situación desesperada </strong>, <strong> pierdes esta oportunidad </strong>.",
   "FitDRoller.RollFailurePositionDesperate": "Es el peor resultado. Sufres <strong> daños graves </strong>, <strong> se produce una complicación grave </strong>, <strong> pierdes esta oportunidad de acción </strong>.",
   "FitDRoller.RollXP": "Marca <strong> XP </strong> para el atributo relacionado.",
-  "FitDRoller.RollZeromode": "Cero dados lanzados: tira dos dados y toma el más bajo",
+  "FitDRoller.RollZeroMode": "Cero dados lanzados: tira dos dados y toma el más bajo",
   "FitDRoller.RollGreatEffect": "Gran efecto",
   "FitDRoller.RollGreatEffectDescription": "Obtienes un resultado excepcional o un efecto extremo. <br> <br> Si se trata de una tirada de implicación, ya has superado el primer obstáculo y estás en una posición <strong> controlada </strong> para lo que venga a continuación. <br> <br> Si estás marcando relojes de facción o curación, marca <strong> 5 </strong> segmentos.",
   "FitDRoller.RollStandardEffect": "Efecto estándar",
