--- a/lang/en.json
+++ b/lang/en.json
@@ -47,7 +47,7 @@
   "FitDRoller.RollFailurePositionDesperate": "It’s the worst outcome. You suffer <strong>severe harm</strong>, a <strong>serious complication occurs</strong>, you <strong>lose this opportunity for action</strong>.",
 
   "FitDRoller.RollXP": "Mark <strong>XP</strong> for the related attribute.",
-  "FitDRoller.RollZeromode": "Zero Dice rolled - rolling two dice and taking the lowest",
+  "FitDRoller.RollZeroMode": "Zero Dice rolled - rolling two dice and taking the lowest",
 
   "FitDRoller.RollGreatEffect": "Great Effect",
   "FitDRoller.RollGreatEffectDescription": "You get an exceptional result or an extreme effect.<br><br>If this is an engagement roll, you've already overcome the first obstacle and are in a <strong>controlled</strong> position for whatever is next.<br><br>If you're marking faction or healing clocks, mark <strong>5</strong> segments.",
