--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -27,3 +27,5 @@
 2.0.0  Add infrastructure, official v2 release
 
 2.1.0  Simplify testing, packaging, and deployment
+
+2.2.0  Update compatibility for v10
